    - many zenwinx prototypes changed by replacing short keyword by wchar_t
    - unsafe IncreaseGoogleAnalyticsCounterAsynch routine
      removed from wgx library
    - useless fat32_xxx fields removed from winx_volume_information structure
    - Windows Server 2003 DDK needs to be patched in order to compile
      the program; look at rsc/compilation.dox for details


  Version 5.0.4  2012-03-
  ------------------------------------------------------------------------------
    - taskbar icon overlay indicating that a job is running was added
      for Windows 7 and more recent Windows editions; it can be turned
      on/off by show_taskbar_icon_overlay GUI option
    - menu item to manually check for updates added
    - i18n support was added to file fragmentation reports
    - the following translations were updated:

      Korean, French (FR), Spanish (AR), Croatian
      
    - Internals: WgxSetTaskbarIconOverlay, WgxRemoveTaskbarIconOverlay,
      WgxLoadIcon routines added to wgx library
    - WgxGetResourceString behavior changed
    - math.lshift function added to Lua library


  Version 5.0.3  2012-02-26
  ------------------------------------------------------------------------------
    - produce_html_report and produce_plain_text_report options were added
      to the udreportopts.lua file; now the program generates text reports
      only when they're enabled explicitly
    - GUI was forced to open plain text reports in case of turned off
      HTML reports generation
    - size of plain text reports was reduced by use of UTF-8 encoding
      instead of UTF-16
    - one bug preventing language selection saving on installation was fixed
    - menu icons were added for Vista and more recent Windows editions;
      they can be enabled/disabled through the show_menu_icons GUI option
    - one bug in GUI cluster map draw was fixed
    - few bugs in disk optimization algorithm were fixed