@@ -1016,6 +1016,44 @@ typedef struct _PARTITION_INFORMATION {
     BOOLEAN RewritePartition;
 } PARTITION_INFORMATION, *PPARTITION_INFORMATION;
 
+typedef enum _MEDIA_TYPE
+{
+  Unknown, 
+  F5_1Pt2_512, 
+  F3_1Pt44_512, 
+  F3_2Pt88_512, 
+  F3_20Pt8_512, 
+  F3_720_512, 
+  F5_360_512, 
+  F5_320_512, 
+  F5_320_1024, 
+  F5_180_512, 
+  F5_160_512, 
+  RemovableMedia, 
+  FixedMedia, 
+  F3_120M_512, 
+  F3_640_512, 
+  F5_640_512, 
+  F5_720_512, 
+  F3_1Pt2_512, 
+  F3_1Pt23_1024, 
+  F5_1Pt23_1024, 
+  F3_128Mb_512, 
+  F3_230Mb_512, 
+  F8_256_128, 
+  F3_200Mb_512, 
+  F3_240M_512, 
+  F3_32M_512
+} MEDIA_TYPE;
+
+typedef struct _DISK_GEOMETRY {
+    LARGE_INTEGER Cylinders;
+    MEDIA_TYPE MediaType;
+    DWORD TracksPerCylinder;
+    DWORD SectorsPerTrack;
+    DWORD BytesPerSector;
+} DISK_GEOMETRY;
+
 #define IOCTL_DISK_BASE                 FILE_DEVICE_DISK
 #define IOCTL_DISK_GET_DRIVE_GEOMETRY   CTL_CODE(IOCTL_DISK_BASE, 0x0000, METHOD_BUFFERED, FILE_ANY_ACCESS)
 #define IOCTL_DISK_GET_PARTITION_INFO   CTL_CODE(IOCTL_DISK_BASE, 0x0001, METHOD_BUFFERED, FILE_READ_ACCESS)
